@@ -281,6 +281,9 @@
 
 	Fixed a leak of error message string when using `:rename new-names...`.
 
+	Fixed :rename not recognizing identical paths in source and destination
+	lists if they were edited (e.g., to contain extra slashes, "./" or "../").
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
